Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;



// Funções

DllImport int ECF_AbreCupom(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_AbreCupomVinculado(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const double valor);

DllImport int ECF_AbreCupomVinculadoCNF(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const PCHAR codComprovanteNaoFiscal, const double valor);

DllImport int ECF_AbreRelatorioGerencial(const INTPTR ecfHandle, const int indice);

DllImport int ECF_CancelaCupom(const INTPTR ecfHandle);

DllImport int ECF_CancelaDescontoAcrescimoItem(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaDescontoAcrescimoSubTotal(const INTPTR ecfHandle, const char tipoAcrescimoDesconto);

DllImport int ECF_CancelaItemVendido(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaItemVendidoParcial(const INTPTR ecfHandle, const int numItem, const double quantidade);

DllImport int ECF_DescontoAcrescimoItemAnterior(const INTPTR ecfHandle, const double valorDescontoAcrescimo, const PCHAR descontoAcrescimo);

DllImport int ECF_EfetuaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EstornaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagtoEstornar, const PCHAR codFormaPagtoEfetivar, const double valor, const PCHAR observacao);

DllImport int ECF_FechaCupom(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_FechaRelatorio(const INTPTR ecfHandle);

DllImport int ECF_LegendaInmetroProximoItem(const INTPTR ecfHandle);

DllImport int ECF_LeituraX(const INTPTR ecfHandle);

DllImport int ECF_LinhaCupomVinculado(const INTPTR ecfHandle, const PCHAR linha);

DllImport int ECF_LinhaRelatorioGerencial(const INTPTR ecfHandle, const PCHAR linha, const int indiceBMP);

DllImport int ECF_PulaLinhas(const INTPTR ecfHandle, const int numLinhas);

DllImport int ECF_ReducaoZ(const INTPTR ecfHandle);

DllImport int ECF_SubtotalizaCupom(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_VendeItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR aliquotaICMS, const double qtd, const double valorUnitario, const double descontoPorc, const PCHAR unidade, const PCHAR tipoDescontoAcrescimo, const PCHAR descontoAcrescimo);